project/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: backend-deployment 
  labels: 
    app: backend 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: backend 
  template: 
    metadata: 
      name: backend-template 
      labels: 
        app: backend 
    spec: 
      containers: 
      - name: backend-container 
        image: 101669202146.dkr.ecr.ap-south-1.amazonaws.com/backend
        ports: 
        - name: backend-port 
          containerPort: 8080
