project/frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service 
  labels: 
    app: frontend 
spec: 
  type: ClusterIP 
  selector: 
    app: frontend 
  ports: 
  - port: 80
    targetPort: 80
